--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -12,7 +12,7 @@ Let's walk through the process.
 
 <Video
   src="https://www.youtube.com/watch?v=2-j4LuabeHQ&t=3s"
-  title="Visual guide to the usage of inkeep push"
+  title="Using Inkeep push"
 />
 
 ### Step 1: Install the Inkeep CLI
