--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -32,7 +32,7 @@ You can set up SigNoz in two ways:
 
 <Video
   src="https://www.youtube.com/watch?v=F8n6427hjUE&t=3s"
-  title="Visual guide to the SigNoz Cloud Setup steps"
+  title="SigNoz Cloud Setup steps"
 />
 
 ### Step 1: Create a SigNoz Cloud Project
@@ -88,7 +88,7 @@ OTEL_EXPORTER_OTLP_TRACES_HEADERS="signoz-ingestion-key=<your-ingestion-key>"
 
 <Video
   src="https://www.youtube.com/watch?v=DWuL4AeRzAA&t=3s"
-  title="Visual guide to the Local SigNoz Setup steps"
+  title="Local SigNoz Setup steps"
 />
 
 ### Prerequisites
