--- a/agents-docs/content/docs/tutorials/upgrading.mdx
+++ b/agents-docs/content/docs/tutorials/upgrading.mdx
@@ -1,6 +1,7 @@
 ---
-title: Upgrading
-description: Upgrade the Inkeep Agent Framework
+title: Upgrading your Inkeep version
+sidebarTitle: Upgrading
+description: Upgrade the packages that make up the Inkeep Agent Framework
 icon: "LuPackage"
 ---
 
@@ -33,3 +34,4 @@ If you installed the `@inkeep/agents-cli` package globally, you can upgrade it t
 ```bash
 inkeep update
 ```
+
