--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -8,7 +8,7 @@ icon: "LuRocket"
 
 <Video
   src="https://www.youtube.com/watch?v=T7ZKQz7Y1-E&t=3s"
-  title="Visual guide to the Quick Start steps"
+  title="Quick Start steps"
 />
 
 ### Prerequisites
