--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/inkeep-provider.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/inkeep-provider.mdx
@@ -28,6 +28,7 @@ const inkeep = createInkeep({
   baseURL: process.env.INKEEP_AGENTS_RUN_API_URL, // Required
   apiKey: '<your-agent-api-key>', // Created in the Agents Dashboard
   headers: { // Optional if you are developing locally and don't want to use an api key
+    'x-inkeep-agent-id': 'your-agent-id',
     'x-inkeep-tenant-id': 'your-tenant-id',
     'x-inkeep-project-id': 'your-project-id',
   },
