Remove provider input (#876)
* update provider input

* update docs

* changeset

* update readme

--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/inkeep-provider.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/inkeep-provider.mdx
@@ -35,7 +35,7 @@ const inkeep = createInkeep({
 });
 
 const { text } = await generateText({
-  model: inkeep('agent-123'),
+  model: inkeep(),
   prompt: 'What is the weather in NYC?',
 });
 
@@ -50,13 +50,14 @@ import { createInkeep } from '@inkeep/ai-sdk-provider';
 
 const inkeep = createInkeep({
   baseURL: process.env.INKEEP_AGENTS_RUN_API_URL,
+  apiKey: '<your-agent-api-key>', // The agent ID is encoded in the API key
   headers: {
     'x-emit-operations': 'true', // Enable tool event streaming
   },
 });
 
 const result = await streamText({
-  model: inkeep('agent-123'),
+  model: inkeep(),
   prompt: 'Plan an event in NYC',
 });
 
@@ -77,12 +78,12 @@ createInkeep({
 })
 ```
 
-### Model Options
+### Provider Options
 
 Pass options when creating a provider instance:
 
 ```typescript
-const model = inkeep({
+const provider = inkeep({
   conversationId: 'conv-456',
   headers: { 'user-id': 'user-789' },
 });
@@ -95,13 +96,14 @@ To receive tool call and result events in your stream, include the `x-emit-opera
 ```typescript
 const inkeep = createInkeep({
   baseURL: process.env.INKEEP_AGENTS_RUN_API_URL,
+  apiKey: '<your-agent-api-key>', // The agent ID is encoded in the API key
   headers: {
     'x-emit-operations': 'true',
   },
 });
 
 const result = await streamText({
-  model: inkeep('agent-123'),
+  model: inkeep(),
   prompt: 'Search for recent papers on AI',
 });
 
