--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -85,7 +85,7 @@ When running `pnpm dev` from your [quickstart workspace](/quick-start/start-deve
 - The `mcp` tab contains logs for your [custom MCP servers](/tutorials/how-to-create-mcp-servers/inkeep).
 - The `dashboard` tab displays logs for the [Visual Builder](/visual-builder/overview) dashboard.
 
-To terminate the running services, click on the `Processes` box and press `q`.
+To terminate the running services, click press `q` or `esc` in the terminal.
 
 ## Common Configuration Issues
 
