--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -123,7 +123,7 @@ When you visit `http://localhost:3080`, you can sign up with your desired creden
 
 ### Step 3: Configure Environment Variables
 
-In your **root project directory** (e.g., `my-agent-directory`), update your `.env` file:
+In your **root project directory** (e.g., `my-agents`), update your `.env` file:
 
 ```bash
 # SigNoz Configuration
