--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -12,8 +12,8 @@ icon: "LuRocket"
 ### Step 1: Create a new agents project
 
 ```bash
-npx @inkeep/create-agents my-agent-directory 
-cd my-agent-directory
+npx @inkeep/create-agents my-agents 
+cd my-agents
 ```
 
 ### Step 2: Launch the development environment
