--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -12,7 +12,8 @@ If you do not have an Inkeep project already, [follow these steps](/get-started/
 
 ### Step 2: Create a Postgres Database
 
-Create a Postgres database on the [**Vercel Marketplace**](https://vercel.com/marketplace/neon) or directly at [**Neon**](https://neon.tech/):
+Create a Postgres database on the [**Vercel Marketplace**](https://vercel.com/marketplace/neon) or directly at [**Neon**](https://neon.tech/).
+
 
 ### Step 3: Configure Database Connection
 
