--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -38,9 +38,8 @@ This will:
 
 1. Create `.env` from the template
 2. Set up user-global config at `~/.inkeep/config`
-3. Start the postgres database
 4. Install dependencies
-5. Initialize the database
+5. Initialize the database, starting the postgres docker container and applying migrations
 
 Add API keys for the AI providers you want to use to the root `.env`. You must have at least one AI provider configured.
 
