--- a/agents-docs/content/docs/typescript-sdk/models.mdx
+++ b/agents-docs/content/docs/typescript-sdk/models.mdx
@@ -1,7 +1,7 @@
 ---
 title: Model Configuration
 description: Configure AI models for your Agents and Sub Agents
-icon: "LuBrain"
+icon: "LuSettings2"
 ---
 
 Configure models at **Project** (required), **Agent**, or **Sub Agent** levels. Settings inherit down the hierarchy.
