--- a/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
@@ -7,36 +7,24 @@ icon: "LuSparkles"
 
 MCP servers enable your agents to fetch real-time information and take action on your systems, services, and applications.
 
-## Three ways to use MCP servers
+## Choose your approach
 
-### Native MCP Servers
+Select the option that best fits your needs:
 
-The fastest way to get started is by connecting to Native MCP servers - these are pre-built servers provided directly by SaaS vendors that offer them. You don't need to build anything, just register them.
+- **Native MCP Servers** - Pre-built servers from SaaS vendors (Atlassian, Linear, Notion, etc.). Fastest setup, just register and go.
+- **Composio MCP Servers** - Access 10,000+ pre-built servers through Composio's platform. Similar to Native, but with a wider selection.
+- **Custom MCP Servers** - Build your own servers for custom APIs and business logic. Requires development and deployment.
+
+## Get started
 
 <Cards>
-  <Card title="Native" icon="LuPackageCheck" href="/tutorials/mcp-servers/native-mcp-servers">
-    Connect to Native MCP servers from providers like Atlassian, Linear, Notion, and more.
+  <Card title="Native MCP Servers" icon="LuPackageCheck" href="/tutorials/mcp-servers/native-mcp-servers">
+    Connect to pre-built servers from providers like Atlassian, Linear, Notion, and more. No building required.
   </Card>
-</Cards>
-
-### Composio MCP Servers
-
-Access 10,000+ out-of-box MCP servers for popular services through Composio's platform. Similar to Native servers, these are pre-built and hosted - you just need to register them.
-
-<Cards>
-  <Card title="Composio" icon="brand/Composio" href="/tutorials/mcp-servers/composio-mcp-servers">
-    Connect to Composio's platform for access to thousands of out-of-box MCP servers.
+  <Card title="Composio MCP Servers" icon="LuComponent" href="/tutorials/mcp-servers/composio-mcp-servers">
+    Access thousands of out-of-box MCP servers through Composio's platform.
   </Card>
-</Cards>
-
-### Custom MCP Servers
-
-When pre-built servers don't meet your needs, you can build custom MCP servers for your own APIs and business logic. After building and deploying your server, register it.
-
-<Cards>
-  <Card title="Custom" icon="brand/Inkeep" href="/tutorials/mcp-servers/custom-mcp-servers">
+  <Card title="Custom MCP Servers" icon="LuHammer" href="/tutorials/mcp-servers/custom-mcp-servers">
     Build your own custom MCP servers using Inkeep templates or Vercel's Next.js template.
   </Card>
 </Cards>
-
-
