--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -43,6 +43,8 @@ cd my-agent-directory
 
 ### Step 2: Run the setup script
 
+Ensure Docker Desktop (or Docker daemon) is running before running the setup script.
+
 ```bash
 pnpm setup-dev
 ```
