--- a/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
@@ -14,6 +14,7 @@ Select the option that best fits your needs:
 - **Native MCP Servers** - Pre-built servers from SaaS vendors (Atlassian, Linear, Notion, etc.). Fastest setup, just register and go.
 - **Composio MCP Servers** - Access 10,000+ pre-built servers through Composio's platform. Similar to Native, but with a wider selection.
 - **Custom MCP Servers** - Build your own servers for custom APIs and business logic. Requires development and deployment.
+- **Gram by Speakeasy** - Convert OpenAPI specs into MCP servers using Gram by Speakeasy.
 
 ## Get started
 
@@ -21,10 +22,13 @@ Select the option that best fits your needs:
   <Card title="Native MCP Servers" icon="LuPackageCheck" href="/tutorials/mcp-servers/native-mcp-servers">
     Connect to pre-built servers from providers like Atlassian, Linear, Notion, and more. No building required.
   </Card>
-  <Card title="Composio MCP Servers" icon="LuComponent" href="/tutorials/mcp-servers/composio-mcp-servers">
+  <Card title="Composio MCP Servers" icon="brand/Composio" href="/tutorials/mcp-servers/composio-mcp-servers">
     Access thousands of out-of-box MCP servers through Composio's platform.
   </Card>
-  <Card title="Custom MCP Servers" icon="LuHammer" href="/tutorials/mcp-servers/custom-mcp-servers">
+  <Card title="Custom MCP Servers" icon="brand/Inkeep" href="/tutorials/mcp-servers/custom-mcp-servers">
     Build your own custom MCP servers using Inkeep templates or Vercel's Next.js template.
+  </Card>
+  <Card title="Gram" icon="LuHammer" href="https://www.speakeasyapi.dev/docs/gram/getting-started">
+    Convert API specs into MCP servers using Gram by Speakeasy.
   </Card>
 </Cards>
