--- a/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
@@ -28,7 +28,7 @@ Select the option that best fits your needs:
   <Card title="Custom MCP Servers" icon="brand/Inkeep" href="/tutorials/mcp-servers/custom-mcp-servers">
     Build your own custom MCP servers using Inkeep templates or Vercel's Next.js template.
   </Card>
-  <Card title="Gram" icon="LuHammer" href="https://www.speakeasyapi.dev/docs/gram/getting-started">
-    Convert API specs into MCP servers using Gram by Speakeasy.
+  <Card title="Gram" icon="LuHammer" href="/tutorials/mcp-servers/gram">
+    Convert OpenAPI specs into MCP servers using Gram by Speakeasy.
   </Card>
 </Cards>
