--- a/agents-docs/_snippets/mcp/intro-create-and-add.mdx
+++ b/agents-docs/_snippets/mcp/intro-create-and-add.mdx
@@ -1,9 +1,10 @@
 To use MCP servers with your agents, you can:
 - **Connect to Native MCP servers** from providers like Atlassian, Linear, Notion, and more
 - **Use Composio's platform** for access to 10,000+ out-of-box MCP servers
-- **Build Custom MCP servers** for your own APIs and business logic
+- **Use Gram** to easily convert existing OpenAPI APIs into MCP Servers 
+- **Build Custom MCP servers** for totally custom MCP servers
 
-See the [MCP Servers tutorial](/tutorials/mcp-servers/overview) for details on all three approaches.
+See the [MCP Servers tutorial](/tutorials/mcp-servers/overview) for details on all recommended approaches.
 
 Once you have access to an MCP server, you can register it with your agents. 
 
