--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -29,3 +29,11 @@ You can also find us on:
 </Cards>
 
 Feel free to tag us as `@inkeep` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-projects).
+
+To keep up to date with all news related to AI Agents, sign up for the Agents Newsletter:
+
+<Cards>
+  <Card title="Agents Newsletter" icon="LuMail" href="https://inkeep.com/agents-newsletter">
+    Get the latest AI Agents news, tips, and updates delivered to your inbox.
+  </Card>
+</Cards>
