--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -36,6 +36,8 @@ Navigate to the folder
 cd my-agents
 ```
 
+Open the folder using your favorite coding editor. To open with Cursor, you can run `cursor .` 
+
 ### Step 2: Run the setup script
 
 Ensure Docker Desktop (or Docker daemon) is running before running the setup script.
