--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -2,7 +2,7 @@
 title: The No-Code + Code Agent Builder
 sidebarTitle: Overview
 icon: "LuBookOpen"
-description: Inkeep is a platform for building Agent-driven chat assistants and AI Workflows.
+description: Inkeep is a platform for building Agent Chat Assistants and AI Workflows.
 ---
 
 With Inkeep, you can build AI Agents with a **No-Code Visual Builder** and **Developer SDK**. Agents can be edited in either with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in one platform.
