--- a/agents-docs/content/docs/tutorials/mcp-servers/composio-mcp-servers.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/composio-mcp-servers.mdx
@@ -23,3 +23,5 @@ const composioTool = mcpTool({
   serverUrl: 'YOUR_COMPOSIO_MCP_URL', // From Composio dashboard
 });
 ```
+
+<Snippet file="mcp/next-steps.mdx" />
