--- a/agents-docs/content/docs/tutorials/mcp-servers/custom-mcp-servers.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/custom-mcp-servers.mdx
@@ -12,7 +12,7 @@ Build custom MCP servers when:
 - You need custom business logic beyond what existing servers provide
 - You have proprietary systems that require custom integration
 
-If pre-built servers meet your needs, consider [Native MCP servers](/tutorials/mcp-servers/native-mcp-servers) or [Composio's platform](/tutorials/mcp-servers/composio-mcp-servers) instead.
+If pre-built servers meet your needs, consider [Native MCP servers](/tutorials/mcp-servers/native-mcp-servers), [Composio's platform](/tutorials/mcp-servers/composio-mcp-servers), or [Gram](/tutorials/mcp-servers/gram) instead.
 
 ## Getting Started
 
@@ -66,3 +66,5 @@ If you have already deployed to Vercel, you can simply update the deployment by 
 <Note>
 Enable Fluid compute and set `maxDuration` to 800 in `apps/mcp/app/[server-name]/[transport]/route.ts` if you're on a Pro or Enterprise plan and have long-running operations.
 </Note>
+
+<Snippet file="mcp/next-steps.mdx" />
