--- a/agents-docs/content/docs/tutorials/mcp-servers/gram.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/gram.mdx
@@ -1,12 +1,12 @@
 ---
 title: Create an OpenAPI-based MCP server
 sidebarTitle: Gram
-icon: "LuCloud"
+icon: "brand/Gram"
 ---
 
 ## Overview
 
-Gram by Speakeasy turns any OpenAPI specification into a production-ready MCP server. Upload your API spec, and Gram automatically generates tool definitions, handles hosting and authentication, and deploys your server- so you can focus on building powerful agents.
+Gram by Speakeasy turns any OpenAPI specification into a production-ready MCP server. Upload your API spec, and Gram automatically generates tool definitions, handles hosting and authentication, and deploys your server—so you can focus on building powerful agents.
 
 Visit [Gram's documentation](https://www.speakeasy.com/docs/gram/getting-started/openapi) for a complete guide.
 
@@ -39,10 +39,4 @@ Your MCP server is ready to ship! Open the MCP page, and open your MCP server by
 
 To add authentication, set the appropriate environment variables. See [Step 3 in the Gram documentation](https://www.speakeasy.com/docs/gram/getting-started/openapi#step-3-set-environment-variables) for details.
 
-### Next steps
-
-<Cards>
-    <Card title="Register MCP servers as tools" icon="LuHammer" href="/typescript-sdk/tools/mcp-tools">
-    Learn how to register MCP servers as tools in your agents
-    </Card>
-</Cards>
+<Snippet file="mcp/next-steps.mdx" />
