--- a/agents-docs/content/docs/tutorials/mcp-servers/native-mcp-servers.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/native-mcp-servers.mdx
@@ -12,3 +12,5 @@ The fastest way to get started is by connecting to existing MCP servers provided
 These servers often implement OAuth 2.1 with PKCE for secure authentication that allow for `1-click` authentication without the need for API keys.
 
 <Snippet file="mcp/popular-oauth-servers.mdx" />
+
+<Snippet file="mcp/next-steps.mdx" />
