--- a/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: MCP Server Options
 sidebarTitle: Overview
-description: Learn about the three ways to use MCP servers with your agents
+description: Learn about the recommended ways to use MCP servers with your agents
 icon: "LuSparkles"
 ---
 
@@ -28,7 +28,7 @@ Select the option that best fits your needs:
   <Card title="Custom MCP Servers" icon="brand/Inkeep" href="/tutorials/mcp-servers/custom-mcp-servers">
     Build your own custom MCP servers using Inkeep templates or Vercel's Next.js template.
   </Card>
-  <Card title="Gram" icon="LuHammer" href="/tutorials/mcp-servers/gram">
+  <Card title="Gram" icon="brand/Gram" href="/tutorials/mcp-servers/gram">
     Convert OpenAPI specs into MCP servers using Gram by Speakeasy.
   </Card>
 </Cards>
