--- a/agents-docs/content/docs/typescript-sdk/credentials/nango.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/nango.mdx
@@ -1,7 +1,7 @@
 ---
 title: Use Nango as a Credential Store
 sidebarTitle: Nango
-icon: "LuCloud"
+icon: "brand/Nango"
 ---
 
 Nango is an excellent choice for both development and production environments, particularly when working with OAuth2.1/PKCE flows and complex integrations.
@@ -12,7 +12,7 @@ To get started, first set up Nango either through cloud or local deployment, the
 
 ### Step 1: Create a Nango account
 
-Sign up [here](https://app.nango.dev/signin)
+Sign up [here](https://app.nango.dev/signin).
 
 ### Step 2: Save your Nango secret key
 
