--- a/agents-docs/content/docs/typescript-sdk/credentials/overview.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/overview.mdx
@@ -9,7 +9,7 @@ icon: "LuSparkles"
 MCP servers and external agents may require authentication for secure access. The Inkeep agent framework supports storing these credentials in three different ways:
 
 <Cards>
-  <Card title="Nango Store (Recommended)" icon="LuCloud" href="/typescript-sdk/credentials/nango">
+  <Card title="Nango Store (Recommended)" icon="brand/Nango" href="/typescript-sdk/credentials/nango">
     **Best for:** Development or Production environments with OAuth2.1/PKCE flows and complex integrations
     
     **Pros:**
