--- a/agents-docs/content/docs/typescript-sdk/tools/mcp-tools.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/mcp-tools.mdx
@@ -11,7 +11,7 @@ Using MCP tools is a two step process:
 
 ### Step 1: Get an MCP server URL
 
-You need access to an MCP server before you can use its tools. Learn about connecting to Native servers, using Composio, or building Custom servers in the [MCP Servers tutorial](/tutorials/mcp-servers/overview).
+You need access to an MCP server before you can use its tools. Learn about connecting to Native servers, using Composio, using Gram, or building Custom servers in the [MCP Servers tutorial](/tutorials/mcp-servers/overview).
 
 ### Step 2: Register the MCP server as a tool in your agent
 
