--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -22,6 +22,7 @@ In Inkeep, tools can be added to Sub Agents as:
 - **MCP Servers**: Connect to external services and APIs via the Model Context Protocol. You can:
   - **Connect to Native MCP servers** provided directly by SaaS vendors (no building required)
   - **Access Composio's platform** for 10,000+ out-of-box MCP servers for popular services (no building required)
+  - **Use Gram** to convert OpenAPI specs into MCP servers
   - **Build and deploy Custom servers** for your own APIs and business logic
 
   Register any of these with their associated **Credentials** for your Agents to use.
