Docs improvements mcp (#984)
* refine

* docs

--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -22,6 +22,7 @@ In Inkeep, tools can be added to Sub Agents as:
 - **MCP Servers**: Connect to external services and APIs via the Model Context Protocol. You can:
   - **Connect to Native MCP servers** provided directly by SaaS vendors (no building required)
   - **Access Composio's platform** for 10,000+ out-of-box MCP servers for popular services (no building required)
+  - **Use Gram** to convert OpenAPI specs into MCP servers
   - **Build and deploy Custom servers** for your own APIs and business logic
 
   Register any of these with their associated **Credentials** for your Agents to use.
@@ -198,4 +199,4 @@ The Inkeep Agent framework is composed of several key services and libraries tha
 - **agents-sdk**: TypeScript SDK (`@inkeep/agents-sdk`) for declaratively defining Agents and custom tools in code. Writes to `agents-manage-api`.
 - **agents-cli**: Includes various handy utilities, including `inkeep push` and `inkeep pull` which sync your TypeScript SDK code with the Visual Builder.
 - **agents-run-api**: The Runtime API that exposes Agents as APIs and executes Agent conversations. Keeps conversation state and emits OTEL traces.
-- **agents-ui**: A UI component library of chat interfaces for embedding rich, dynamic Agent conversational experiences in web apps.
+- **agents-ui**: A UI component library of chat interfaces for embedding rich, dynamic conversational AI experiences in web apps.
