--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -28,7 +28,7 @@ const helloAgent = subAgent({
   name: "Hello Agent",
   description: "Says hello",
   canUse: () => [consoleMcp], 
-  prompt: `Reply to the user and console log "hello world" with fun variations like h3llo world`,
+  prompt: "Reply to the user and console log "hello world" with fun variations like h3llo world`,
 });
 
 export const basicAgent = agent({
@@ -78,7 +78,7 @@ Inkeep is designed to be extensible and open: you can use the LLM provider of yo
 
 <Cards>
   <Card
-    title="Follow the <1min Quick Start"
+    title="Follow the 1-min Quick Start"
     icon="LuZap"
     href="/get-started/quick-start"
   >
