--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quick Start
-description: Get started with Inkeep Agents in <1min
+description: Get started with Inkeep Agents in &lt;1min
 icon: "LuRocket"
 ---
 
